--- a/frontend/src/routes/About/Tabela.css
+++ b/frontend/src/routes/About/Tabela.css
@@ -1,3 +1,4 @@
+/* Estilos padrão para a tabela */
 .tabela-transparente {
   border-collapse: collapse;
   width: 100%;
@@ -6,13 +7,35 @@
 .tabela-transparente td,
 .tabela-transparente tr {
   padding: 8px;
-  
 }
 
 td {
-    width: 50%;
+  width: 50%;
 }
 
 .tabela-transparente td:first-child {
-    text-align: left;
+  text-align: left;
+}
+
+/* Estilos para tornar a tabela responsiva */
+@media (max-width: 768px) {
+  .tabela-transparente td {
+    display: block;
   }
+
+  .tabela-transparente td:first-child {
+    text-align: center;
+  }
+
+  .tabela-transparente tr {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+/* Estilos para o HeadingSubInterTitle */
+.tabela .HeadingSubInterTitle {
+  text-align: center;
+  margin-bottom: 5px;
+}
