Retirando borda/outline preto ao clicar no botão do Navbar

--- a/frontend/src/layout/Header/button-navbar.css
+++ b/frontend/src/layout/Header/button-navbar.css
@@ -11,7 +11,17 @@
       background-color: transparent;  
       width: 56px; 
       height: 40px; 
-      
+      border: none;
     }
+     
+     border: none !important;
+     outline: none !important;
+ 
+    
+     &:focus {
+         box-shadow: none !important;
+         border: none !important;
+     }
+    
   }
   
