--- a/App/src/pages/home/home.scss
+++ b/App/src/pages/home/home.scss
@@ -1,5 +1,4 @@
-@import "../../styles.scss";
-
+@import "../../ui/styles/styles.scss";
 .home{
   @include themify($themes) {
     padding: 20px 70px;
